no update-version.pl, and .getDeclaredConstructor().newInstance()